# meta

./: Dockerfile  MANIFESTO.md  README.md  docker-compose.yml  pyproject.toml
docs/: BUNDLE_V1.2.md  CONSCIOUSNESS_EMERGENCE.md  CONTRIBUTION.md  CORRESPONDENCE.md  ECONOMIC_SINGULARITY.md  FIELD_MEMORY.md  FIELD_ONTOLOGY.md  KERNEL_V1.2.md  LIFECYCLE.md  MIGRATION_PATH.md  MOAT_STRATEGY.md  PROTOCOL_EVOLUTION.md  QUANTUM_ENTANGLEMENT.md
examples/: async_swarm.py  quickstart.py
protos/: alloc_signal.proto  contribution.proto  gradient_packet.proto  lifecycle_event.proto  report.proto  uncertainty.proto
sfl/: __init__.py  cli.py
sfl/api/: __init__.py  server.py
sfl/client/: __init__.py  async_client.py  sync_client.py
sfl/core/: __init__.py  allocator.py  critics.py  emergence.py  kernel.py  memory.py  quantum.py  types.py
tests/: __init__.py  test_kernel.py
v0/: README.md  contribution_tracker.py  critic_ensemble.py  emergence_detector.py  field_kernel.py  field_memory.py  lifecycle_manager.py  observation_policy.py  quantum_correlator.py  requirements.txt  tau_allocator.py
